# SoK

Cingulata/: Dockerfile
Cingulata/source/: docker-entrypoint.sh
Cingulata/source/auction-cingulata-tfhe/: CMakeLists.txt  auction-tfhe.cxx  decrypt.cxx  encrypt.cxx  run.sh.in
Cingulata/source/chi-squared-cingulata-tfhe/: chi-squared-tfhe.cxx  encrypt.cxx
Cingulata/source/hamming-cingulata-tfhe/: CMakeLists.txt  decrypt.cxx  encrypt.cxx  hamming-tfhe.cxx  run.sh.in
E3/source/: docker-entrypoint.sh
E3/source/auction-tfhe/: cgt_tfhe.cfg  main.cpp
E3/source/chi-squared-tfhe/: main.cpp
E3/source/hamming-tfhe/: cgt_tfhe.cfg  main.cpp
SEAL/source/: docker-entrypoint.sh
SEAL/source/chi-squared-bfv-naive/: chi_squared.cpp
SEAL/source/chi-squared-bfv-opt/: chi_squared.cpp
